@@ -28,13 +28,6 @@
 #define NEED_SOCKETS
 #include "k5-int.h"
 #include "os-proto.h"
-#ifdef KRB5_USE_INET
-#include <sys/types.h>
-#ifndef _WINSOCKAPI_
-#include <netinet/in.h>
-#include <arpa/inet.h>
-#endif
-#endif
 
 krb5_error_code INTERFACE
 krb5_gen_replay_name(context, address, uniq, string)
